--- a/.eslintrc
+++ b/.eslintrc
@@ -1,33 +1,33 @@
 {
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaVersion": 12,
-    "sourceType": "module"
-  },
-  "plugins": ["@typescript-eslint"],
-  // HERE
-  "extends": [
-    "eslint:recommended",
-    "plugin:@typescript-eslint/recommended",
-    "prettier"
-  ],
-
-  "rules": {
-    "no-unused-vars": "warn",
-    "prefer-const": "error",
-    "no-console": "warn",
-    "no-undef": "error",
-    "no-unused-expressions": "error",
-    "no-unreachable": "error",
-    "@typescript-eslint/consistent-type-definitions": ["error", "type"]
-  },
-
-  "env": {
-    "browser": true,
-    "es2021": true,
-    "node": true
-  },
-  "globals": {
-    "process": "readonly"
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+      "ecmaVersion": 12,
+      "sourceType": "module"
+    },
+    "plugins": ["@typescript-eslint"],
+    // HERE
+    "extends": [
+      "eslint:recommended",
+      "plugin:@typescript-eslint/recommended",
+      "prettier"
+    ],
+  
+    "rules": {
+      "no-unused-vars": "warn",
+      "prefer-const": "error",
+      "no-console": "warn",
+      "no-undef": "error",
+      "no-unused-expressions": "error",
+      // "no-unreachable": "error",
+      "@typescript-eslint/consistent-type-definitions": ["error", "type"]
+    },
+  
+    "env": {
+      "browser": true,
+      "es2021": true,
+      "node": true
+    },
+    "globals": {
+      "process": "readonly"
+    }
   }
-}
