--- a/.eslintrc
+++ b/.eslintrc
@@ -1,33 +1,30 @@
 {
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-      "ecmaVersion": 12,
-      "sourceType": "module"
-    },
-    "plugins": ["@typescript-eslint"],
-    // HERE
-    "extends": [
-      "eslint:recommended",
-      "plugin:@typescript-eslint/recommended",
-      "prettier"
-    ],
-  
-    "rules": {
-      "no-unused-vars": "warn",
-      "prefer-const": "error",
-      "no-console": "warn",
-      "no-undef": "error",
-      "no-unused-expressions": "error",
-      // "no-unreachable": "error",
-      "@typescript-eslint/consistent-type-definitions": ["error", "type"]
-    },
-  
-    "env": {
-      "browser": true,
-      "es2021": true,
-      "node": true
-    },
-    "globals": {
-      "process": "readonly"
-    }
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": 12,
+    "sourceType": "module"
+  },
+  "plugins": ["@typescript-eslint"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "prettier"
+  ],
+  "rules": {
+    "no-unused-vars": "error",
+    "prefer-const": "error",
+    "no-unused-expressions": "error",
+    "no-undef": "error",
+    "no-console": "warn",
+    "@typescript-eslint/consistent-type-definitions": ["error", "type"],
+    "@typescript-eslint/explicit-module-boundary-types": "off"
+  },
+  "env": {
+    "browser": true,
+    "es2021": true,
+    "node":true
+  },
+  "globals": {
+    "process":"readonly"
   }
+}
