--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/nodemailer": "^6.4.15",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
+    "axios": "^1.9.0",
     "bcrypt": "^5.1.0",
     "colorts": "^0.1.63",
     "cookie-parser": "^1.4.6",
