--- a/example.env
+++ b/example.env
@@ -1,4 +1,18 @@
-NODE_ENV =
+NODE_ENV = development
 PORT =  
-DATABASE_URL =
+DATABASE_URL = 
 
+BCRYPT_SALT_ROUNDS = 
+JWT_SECRET = 
+JWT_EXPIRES_IN = 
+
+JWT_REFRESH_SECRET = 
+JWT_REFRESH_EXPIRES_IN = 
+
+RESET_PASS_UI_LINK= 
+
+BKASH_USERNAME = 
+BKASH_PASSWORD =
+BKASH_APP_KEY = 
+BKASH_SECRET = 
+BKASH_BASE_URL=
